Fix text overlapping

--- a/src/app/components/idle/idle.component.css
+++ b/src/app/components/idle/idle.component.css
@@ -15,11 +15,14 @@
 
 #idle-page h1 {
   font-size: 12vh;
+  line-height: normal;
   margin: 0;
+  white-space: normal;
 }
 
 #idle-page p {
   font-size: 3vh;
   margin: 0;
+  line-height: normal;
 }
 
